# galoshes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  prek.toml
.github/workflows/: ci.yml
galoshes/: Cargo.toml
galoshes/src/: embedded.rs  embedded_tests.rs  main.rs  yamux.rs  yamux_tests.rs
garter/: Cargo.toml
garter-bin/: Cargo.toml
garter-bin/src/: config.rs  config_tests.rs  main.rs
garter/src/: binary.rs  binary_tests.rs  chain.rs  chain_tests.rs  error.rs  error_tests.rs  lib.rs  plugin.rs  plugin_tests.rs  shutdown.rs  shutdown_tests.rs  sip003.rs  sip003_tests.rs
garter/tests/: chain_integration.rs
mock-plugin/src/: main.rs
xtask/src/: main.rs
