[package]
name = "galoshes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
garter = { path = "../garter" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
contracts = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
yamux = "0.13"
sha2 = "0.10"
tempfile = "3"

[build-dependencies]
sha2 = "0.10"
